--- a/index.html
+++ b/index.html
@@ -19,7 +19,53 @@
 </head>
 
 <body>
+  <!--Nav Element-->
+  <nav class="navbar navbar-expand-md px3" id="navbar">
+    <a href="#" class="navbar-brand">
+      <img src="img/gearLogo.png" alt="Logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MyNav">
+      <span class="navbar-icon">
+        <i class="fas fa-bars"></i>
+      </span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="MyNav">
+
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Inventory</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Features</a>
+        </li>
+
+      </ul>
+
+      <!--Social-->
+      <div class="nav-icons d-none d-md-block">
+        <a href="#" class="nav-icon">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="#" class="nav-icon">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="nav-icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <!--End Social-->
+
+    </div>
+
+  </nav>
+  <!--End Nav Element-->
 
 
   <!-- jquery -->
