--- a/index.html
+++ b/index.html
@@ -66,7 +66,25 @@
 
   </nav>
   <!--End Nav Element-->
-
+<!--Header Section-->
+<header class="header" id="header">
+  <div class="container-fluid">
+    <div class="row height-max align-items-center">
+      <div class="col-md-9 ml-auto text-right pr-5">
+        <h5 class="title-heading d-inline-block p-2 text-uppercase">the all new</h5>
+        <h2 class="text-uppercase my-2 title">2018 mercedes-benz</h2>
+        <h3 class="text-uppercase">model name</h3>
+        <h6 class="text-capitalize">start from</h6>
+        <h2>$60,000
+          <a href="#" class="title-icon d-inline-block mx-2">
+            <i class="fas fa-play"></i>
+          </a>
+        </h2>
+      </div>
+    </div>
+  </div>
+</header>
+<!--End Header Section-->
 
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
