--- a/index.html
+++ b/index.html
@@ -93,6 +93,47 @@
         <h1 class="font-weight-bold align-self-center mx-1">why choose</h1>
         <h1 class="section-title-special mx-1">car dealer</h1>
       </div>
+      <!--Single Skill-->
+      <div class="col-sm-6 col-md-3 text-center my-3">
+        <a href="#" class="skills-icon p-2 rounded-circle">
+          <i class="fas fa-car fa-fw"></i>
+        </a>
+        <h6 class="text-uppercase font-weight-bold my3">all brands</h6>
+        <div class="skills-underline"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptatem.</p>
+      </div>
+      <!--End Single Skill-->
+      <!--Single Skill-->
+      <div class="col-sm-6 col-md-3 text-center my-3">
+        <a href="#" class="skills-icon p-2 rounded-circle">
+          <i class="fas fa-car fa-fw"></i>
+        </a>
+        <h6 class="text-uppercase font-weight-bold my3">free support</h6>
+        <div class="skills-underline"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptatem.</p>
+      </div>
+      <!--End Single Skill-->
+      <!--Single Skill-->
+      <div class="col-sm-6 col-md-3 text-center my-3">
+        <a href="#" class="skills-icon p-2 rounded-circle">
+          <i class="fas fa-car fa-fw"></i>
+        </a>
+        <h6 class="text-uppercase font-weight-bold my3">caring</h6>
+        <div class="skills-underline"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptatem.</p>
+      </div>
+      <!--End Single Skill-->
+      <!--Single Skill-->
+      <div class="col-sm-6 col-md-3 text-center my-3">
+        <a href="#" class="skills-icon p-2 rounded-circle">
+          <i class="fas fa-car fa-fw"></i>
+        </a>
+        <h6 class="text-uppercase font-weight-bold my3">AFFORDABLE</h6>
+        <div class="skills-underline"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptatem.</p>
+      </div>
+      <!--End Single Skill-->
+
     </div>
   </div>
 </section>
