--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </head>
 
 <body>
+  <!--Preloader-->
+  <div class="preloader d-flex justify-content-center align-items-center" >
+    <img src="img/preloader.gif" alt="preloader">
+  </div>
+  <!--End Preloader-->
   <!--Nav Element-->
   <nav class="navbar navbar-expand-md px3" id="navbar">
     <a href="#" class="navbar-brand">
