inventory section added

--- a/index.html
+++ b/index.html
@@ -152,6 +152,29 @@
 </section>
 <!--End Skills Section-->
 
+<!--inventory Section-->
+<section class="inventory py-5" id="inventory">
+  <div class="container">
+    <!--Section Title-->
+    <div class="row mb-5">
+      <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+        <h1 class="font-weight-bold align-self-center mx-1">our</h1>
+        <h1 class="section-title-special mx-1">inventory</h1>
+      </div>
+    </div>
+    <!-- End Section Title-->
+    <div class="row mb-5">
+      <div class="col-10 mx-auto col-md-12 d-flex justify-content-end">
+        <button class="btn btn-outline-secondary text-uppercase mx-1">all</button>
+        <button class="btn btn-outline-secondary text-uppercase mx-1">american</button>
+        <button class="btn btn-outline-secondary text-uppercase mx-1">german</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!--End inventory Section-->
+
+
 
 
 
