--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <!--Preloader-->
-  <div class="preloader d-flex justify-content-center align-items-center" >
+  <div class="preloader d-flex justify-content-center align-items-center">
     <img src="img/preloader.gif" alt="preloader">
   </div>
   <!--End Preloader-->
@@ -71,108 +71,260 @@
 
   </nav>
   <!--End Nav Element-->
-<!--Header Section-->
-<header class="header" id="header">
-  <div class="container-fluid">
-    <div class="row height-max align-items-center">
-      <div class="col-md-9 ml-auto text-right pr-5">
-        <h5 class="title-heading d-inline-block p-2 text-uppercase">the all new</h5>
-        <h2 class="text-uppercase my-2 title">2018 mercedes-benz</h2>
-        <h3 class="text-uppercase">model name</h3>
-        <h6 class="text-capitalize">start from</h6>
-        <h2>$60,000
-          <a href="#" class="title-icon d-inline-block mx-2">
-            <i class="fas fa-play"></i>
+  <!--Header Section-->
+  <header class="header" id="header">
+    <div class="container-fluid">
+      <div class="row height-max align-items-center">
+        <div class="col-md-9 ml-auto text-right pr-5">
+          <h5 class="title-heading d-inline-block p-2 text-uppercase">the all new</h5>
+          <h2 class="text-uppercase my-2 title">2018 mercedes-benz</h2>
+          <h3 class="text-uppercase">model name</h3>
+          <h6 class="text-capitalize">start from</h6>
+          <h2>$60,000
+            <a href="#" class="title-icon d-inline-block mx-2">
+              <i class="fas fa-play"></i>
+            </a>
+          </h2>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!--End Header Section-->
+  <!--Skills Section-->
+  <section class="skilld py-5" id="skills">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-self-center mx-1">why choose</h1>
+          <h1 class="section-title-special mx-1">car dealer</h1>
+        </div>
+      </div>
+      <div class="row">
+        <!--single skill-->
+        <div class="col-sm-6 col-lg-3 text-center my-3">
+          <a href="#" class="skills-icon p-2 rounded-circle">
+            <i class="fas fa-car fa-fw"></i>
           </a>
-        </h2>
+          <h6 class="text-uppercase font-weight-bold my-3">
+            all brands
+          </h6>
+          <div class="skills-underline"></div>
+          <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
+        </div>
+        <!--end single skill-->
+        <!--single skill-->
+        <div class="col-sm-6 col-lg-3 text-center my-3">
+          <a href="#" class="skills-icon p-2 rounded-circle">
+            <i class="fas fa-comments fa-fw"></i>
+          </a>
+          <h6 class="text-uppercase font-weight-bold my-3">
+            free support </h6>
+          <div class="skills-underline"></div>
+          <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
+        </div>
+        <!--end single skill-->
+        <!--single skill-->
+        <div class="col-sm-6 col-lg-3 text-center my-3">
+          <a href="#" class="skills-icon p-2 rounded-circle">
+            <i class="fas fa-people-carry fa-fw"></i>
+          </a>
+          <h6 class="text-uppercase font-weight-bold my-3">
+            caring
+          </h6>
+          <div class="skills-underline"></div>
+          <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
+        </div>
+        <!--end single skill-->
+        <!--single skill-->
+        <div class="col-sm-6 col-lg-3 text-center my-3">
+          <a href="#" class="skills-icon p-2 rounded-circle">
+            <i class="fas fa-wallet fa-fw"></i>
+          </a>
+          <h6 class="text-uppercase font-weight-bold my-3">
+            AFFORDABLE
+          </h6>
+          <div class="skills-underline"></div>
+          <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
+        </div>
+        <!--end single skill-->
       </div>
     </div>
-  </div>
-</header>
-<!--End Header Section-->
-<!--Skills Section-->
-<section class="skilld py-5" id="skills">
-  <div class="container">
-    <div class="row mb-5">
-      <div class="col d-flex flex-wrap text-uppercase justify-content-center">
-        <h1 class="font-weight-bold align-self-center mx-1">why choose</h1>
-        <h1 class="section-title-special mx-1">car dealer</h1>
-      </div>
-    </div>
-    <div class="row">
-    <!--single skill-->
-    <div class="col-sm-6 col-lg-3 text-center my-3">
-      <a href="#" class="skills-icon p-2 rounded-circle">
-        <i class="fas fa-car fa-fw"></i>
-      </a>
-      <h6 class="text-uppercase font-weight-bold my-3">
-        all brands
-      </h6>
-      <div class="skills-underline"></div>
-      <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
-    </div>
-    <!--end single skill-->
-    <!--single skill-->
-    <div class="col-sm-6 col-lg-3 text-center my-3">
-      <a href="#" class="skills-icon p-2 rounded-circle">
-        <i class="fas fa-comments fa-fw"></i>
-      </a>
-      <h6 class="text-uppercase font-weight-bold my-3">
-        free support </h6>
-      <div class="skills-underline"></div>
-      <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
-    </div>
-    <!--end single skill-->
-    <!--single skill-->
-    <div class="col-sm-6 col-lg-3 text-center my-3">
-      <a href="#" class="skills-icon p-2 rounded-circle">
-        <i class="fas fa-people-carry fa-fw"></i>
-      </a>
-      <h6 class="text-uppercase font-weight-bold my-3">
-        caring
-      </h6>
-      <div class="skills-underline"></div>
-      <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
-    </div>
-    <!--end single skill-->
-    <!--single skill-->
-    <div class="col-sm-6 col-lg-3 text-center my-3">
-      <a href="#" class="skills-icon p-2 rounded-circle">
-        <i class="fas fa-wallet fa-fw"></i>
-      </a>
-      <h6 class="text-uppercase font-weight-bold my-3">
-        AFFORDABLE
-      </h6>
-      <div class="skills-underline"></div>
-      <p class="w-75 mx-auto text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, totam.</p>
-    </div>
-    <!--end single skill-->
-  </div>
-  </div>
-</section>
-<!--End Skills Section-->
+  </section>
+  <!--End Skills Section-->
 
-<!--inventory Section-->
-<section class="inventory py-5" id="inventory">
-  <div class="container">
-    <!--Section Title-->
-    <div class="row mb-5">
-      <div class="col d-flex flex-wrap text-uppercase justify-content-center">
-        <h1 class="font-weight-bold align-self-center mx-1">our</h1>
-        <h1 class="section-title-special mx-1">inventory</h1>
+  <!--inventory Section-->
+  <section class="inventory py-5" id="inventory">
+    <div class="container">
+      <!--Section Title-->
+      <div class="row mb-5">
+        <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-self-center mx-1">our</h1>
+          <h1 class="section-title-special mx-1">inventory</h1>
+        </div>
+      </div>
+      <!-- End Section Title-->
+      <div class="row mb-5">
+        <div class="col-10 mx-auto col-md-12 d-flex justify-content-end">
+          <button class="btn btn-outline-secondary text-uppercase mx-1">all</button>
+          <button class="btn btn-outline-secondary text-uppercase mx-1">american</button>
+          <button class="btn btn-outline-secondary text-uppercase mx-1">german</button>
+        </div>
+      </div>
+      <div class="row">
+        <!--Single Car-->
+        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+          <div class="card car-card">
+            <img src="img/car-german-1.jpeg" class="card-img-top car-img" alt="">
+            <!--Card body-->
+            <div class="card-body">
+              <div class="car-info d-flex justify-content-between">
+                <div class="car-text text-uppercase">
+                  <h6 class="font-weight-bold">car maker</h6>
+                  <h6>model</h6>
+                </div>
+                <h5 class="car-value align-self-center py-2 px-3">
+                  <span class="car-price">$ 10,000</span>
+                </h5>
+              </div>
+            </div>
+            <!--footer-->
+            <div class="card-footer text-capitalize d-flex justify-content-between">
+              <p><span><i class="fas fa-car"></i></span>sedan</p>
+              <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+              <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+            </div>
+          </div>
+        </div>
+        <!--End Single Car-->
+        <!--Single Car-->
+        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+          <div class="card car-card">
+            <img src="img/car-american-1.jpeg" class="card-img-top car-img" alt="">
+            <!--Card body-->
+            <div class="card-body">
+              <div class="car-info d-flex justify-content-between">
+                <div class="car-text text-uppercase">
+                  <h6 class="font-weight-bold">car maker</h6>
+                  <h6>model</h6>
+                </div>
+                <h5 class="car-value align-self-center py-2 px-3">
+                  <span class="car-price">$ 10,000</span>
+                </h5>
+              </div>
+            </div>
+            <!--footer-->
+            <div class="card-footer text-capitalize d-flex justify-content-between">
+              <p><span><i class="fas fa-car"></i></span>sedan</p>
+              <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+              <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+            </div>
+          </div>
+        </div>
+        <!--End Single Car-->
+        <!--Single Car-->
+        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+          <div class="card car-card">
+            <img src="img/car-american-5.jpeg" class="card-img-top car-img" alt="">
+            <!--Card body-->
+            <div class="card-body">
+              <div class="car-info d-flex justify-content-between">
+                <div class="car-text text-uppercase">
+                  <h6 class="font-weight-bold">car maker</h6>
+                  <h6>model</h6>
+                </div>
+                <h5 class="car-value align-self-center py-2 px-3">
+                  <span class="car-price">10,000</span>
+                </h5>
+              </div>
+            </div>
+            <!--footer-->
+            <div class="card-footer text-capitalize d-flex justify-content-between">
+              <p><span><i class="fas fa-car"></i></span>sedan</p>
+              <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+              <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+            </div>
+          </div>
+        </div>
+        <!--End Single Car-->
+        <!--Single Car-->
+        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+          <div class="card car-card">
+            <img src="img/car-german-2.jpeg" class="card-img-top car-img" alt="">
+            <!--Card body-->
+            <div class="card-body">
+              <div class="car-info d-flex justify-content-between">
+                <div class="car-text text-uppercase">
+                  <h6 class="font-weight-bold">car maker</h6>
+                  <h6>model</h6>
+                </div>
+                <h5 class="car-value align-self-center py-2 px-3">
+                  <span class="car-price">10,000</span>
+                </h5>
+              </div>
+            </div>
+            <!--footer-->
+            <div class="card-footer text-capitalize d-flex justify-content-between">
+              <p><span><i class="fas fa-car"></i></span>sedan</p>
+              <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+              <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+            </div>
+          </div>
+        </div>
+        <!--End Single Car-->
+        <!--Single Car-->
+        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+          <div class="card car-card">
+            <img src="img/car-american-3.jpeg" class="card-img-top car-img" alt="">
+            <!--Card body-->
+            <div class="card-body">
+              <div class="car-info d-flex justify-content-between">
+                <div class="car-text text-uppercase">
+                  <h6 class="font-weight-bold">car maker</h6>
+                  <h6>model</h6>
+                </div>
+                <h5 class="car-value align-self-center py-2 px-3">
+                  <span class="car-price">10,000</span>
+                </h5>
+              </div>
+            </div>
+            <!--footer-->
+            <div class="card-footer text-capitalize d-flex justify-content-between">
+              <p><span><i class="fas fa-car"></i></span>sedan</p>
+              <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+              <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+            </div>
+          </div>
+        </div>
+        <!--End Single Car-->
+        <!--Single Car-->
+        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+          <div class="card car-card">
+            <img src="img/car-german-3.jpeg" class="card-img-top car-img" alt="">
+            <!--Card body-->
+            <div class="card-body">
+              <div class="car-info d-flex justify-content-between">
+                <div class="car-text text-uppercase">
+                  <h6 class="font-weight-bold">car maker</h6>
+                  <h6>model</h6>
+                </div>
+                <h5 class="car-value align-self-center py-2 px-3">
+                  <span class="car-price">10,000</span>
+                </h5>
+              </div>
+            </div>
+            <!--footer-->
+            <div class="card-footer text-capitalize d-flex justify-content-between">
+              <p><span><i class="fas fa-car"></i></span>sedan</p>
+              <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+              <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+            </div>
+          </div>
+        </div>
+        <!--End Single Car-->
       </div>
     </div>
-    <!-- End Section Title-->
-    <div class="row mb-5">
-      <div class="col-10 mx-auto col-md-12 d-flex justify-content-end">
-        <button class="btn btn-outline-secondary text-uppercase mx-1">all</button>
-        <button class="btn btn-outline-secondary text-uppercase mx-1">american</button>
-        <button class="btn btn-outline-secondary text-uppercase mx-1">german</button>
-      </div>
-    </div>
-  </div>
-</section>
-<!--End inventory Section-->
+  </section>
+  <!--End inventory Section-->
 
 
 
