--- a/index.html
+++ b/index.html
@@ -325,6 +325,38 @@
     </div>
   </section>
   <!--End inventory Section-->
+  <!--Question Section-->
+  <div class="section question py-5" id="question">
+    <div class="container">
+      <div class="row">
+        <!--first question single-->
+        <div class="col-10 mx-auto my-2 col-md-6 d-flex justify-content-between question-gray p-4">
+          <a href="#" class="question-icon mr-3">
+            <i class="fas fa-search fa-fw"></i>
+          </a>
+          <div class="question-text w-75">
+            <h4 class="question-title text-capitalize font-weight-bold">
+              Are Yo Looking For A Car?
+            </h4>
+            <p class="question-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, quis!</p>
+          </div>
+        </div>
+        <!-- second question single-->
+        <div class="col-10 mx-auto my-2 col-md-6 d-flex justify-content-between question-yellow p-4">
+          <a href="#" class="question-icon mr-3">
+            <i class="fas fa-dollar-sign fa-fw"></i>
+          </a>
+          <div class="question-text w-75">
+            <h4 class="question-title text-capitalize font-weight-bold">
+              Do You Want To Sell A Car?
+            </h4>
+            <p class="question-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, quis!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--End Question Section-->
 
 
 
