--- a/index.html
+++ b/index.html
@@ -438,6 +438,53 @@
     </div>
   </section>
   <!-- End Of Featured -->
+  <!--Gallery Section-->
+  <section class="gallery py-5" id="gallery">
+    <div class="container">
+      <!--Section title-->
+      <div class="row mb-5">
+        <div class="col d-flex flex-warp text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-selft-center mx-1">our</h1>
+          <h1 class="section-title-special mx-1">gallery</h1>
+        </div>
+      </div>
+      <!--end Section title-->
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="gallery-item">
+            <img src="img/car-american-1.jpeg" alt="car" class="img-fluid gallery-img">
+          </div>
+        </div>
+          <div class="col-sm-6 d-flex flex-column justify-content-between">
+            <div class="row">
+              <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-2.jpeg" alt="car" class="img-fluid gallery-img">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-3.jpeg" alt="car" class="img-fluid gallery-img">
+              </div>
+            </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="gallery-item">
+                  <img src="img/car-american-4.jpeg" alt="car" class="img-fluid gallery-img">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="gallery-item">
+                  <img src="img/car-american-5.jpeg" alt="car" class="img-fluid gallery-img">
+                </div>
+              </div>
+            </div>
+          </div>        
+      </div>
+    </div>
+  </section>
+  <!--End Gallery Section-->
 
 
 
