contact section added

--- a/index.html
+++ b/index.html
@@ -485,6 +485,22 @@
     </div>
   </section>
   <!--End Gallery Section-->
+  <!--Contact section-->
+  <section class="contact py-5" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-8 mx-auto col-md-6">
+          <form>
+            <div class="form-group">
+              <input type="email" class="form-control contact-input p-3" placeholder="Enter Email">
+              <button type="submit" class="btn btn-outline-secondary btn-block contact-btn">submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--end Contact section-->
 
 
 
