--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     </div>
   </div>
   <!--End Question Section-->
-  
+
   <!-- Featured -->
   <section class="featured py-5" id="featured">
     <div class="container">
@@ -370,70 +370,70 @@
       </div>
       <!-- End Section Title-->
 
-     <div class="row">
+      <div class="row">
         <!--featured info-->
-      <div class="col-10 mx-auto col-lg-6 featured-info my-3">
-        <!--Single Item-->
-        <div class="featured-item my-3 d-flex p-2 text-capitalize
+        <div class="col-10 mx-auto col-lg-6 featured-info my-3">
+          <!--Single Item-->
+          <div class="featured-item my-3 d-flex p-2 text-capitalize
        align-items-baseline flex-wrap">
-          <span class="featured-icon mr-2">
-            <i class="fas fa-car"></i>
-          </span>
-          <h5 class="font-weight-bold mx-1">mercedes</h5>
-          <h5 class="mx-1">new model</h5>
-        </div>
-        <!--End Single Item-->
-        <!--Single Item-->
-        <div class="featured-item my-3 d-flex p-2 text-capitalize
+            <span class="featured-icon mr-2">
+              <i class="fas fa-car"></i>
+            </span>
+            <h5 class="font-weight-bold mx-1">mercedes</h5>
+            <h5 class="mx-1">new model</h5>
+          </div>
+          <!--End Single Item-->
+          <!--Single Item-->
+          <div class="featured-item my-3 d-flex p-2 text-capitalize
           align-items-baseline flex-wrap">
-          <span class="featured-icon mr-2">
-            <i class="fas fa-car"></i>
-          </span>
-          <h5 class="font-weight-bold mx-1">mercedes</h5>
-          <h5 class="mx-1">new model</h5>
-        </div>
-        <!--End Single Item-->
-        <!--Single Item-->
-        <div class="featured-item my-3 d-flex p-2 text-capitalize
+            <span class="featured-icon mr-2">
+              <i class="fas fa-car"></i>
+            </span>
+            <h5 class="font-weight-bold mx-1">mercedes</h5>
+            <h5 class="mx-1">new model</h5>
+          </div>
+          <!--End Single Item-->
+          <!--Single Item-->
+          <div class="featured-item my-3 d-flex p-2 text-capitalize
         align-items-baseline flex-wrap">
-          <span class="featured-icon mr-2">
-            <i class="fas fa-car"></i>
-          </span>
-          <h5 class="font-weight-bold mx-1">mercedes</h5>
-          <h5 class="mx-1">new model</h5>
-        </div>
-        <!--End Single Item-->
-        <!--Single Item-->
-        <div class="featured-item my-3 d-flex p-2 text-capitalize
+            <span class="featured-icon mr-2">
+              <i class="fas fa-car"></i>
+            </span>
+            <h5 class="font-weight-bold mx-1">mercedes</h5>
+            <h5 class="mx-1">new model</h5>
+          </div>
+          <!--End Single Item-->
+          <!--Single Item-->
+          <div class="featured-item my-3 d-flex p-2 text-capitalize
         align-items-baseline flex-wrap">
-          <span class="featured-icon mr-2">
-            <i class="fas fa-car"></i>
-          </span>
-          <h5 class="font-weight-bold mx-1">mercedes</h5>
-          <h5 class="mx-1">new model</h5>
-        </div>
-        <!--End Single Item-->
-        <!--Single Item-->
-        <div class="featured-item my-3 d-flex p-2 text-capitalize
+            <span class="featured-icon mr-2">
+              <i class="fas fa-car"></i>
+            </span>
+            <h5 class="font-weight-bold mx-1">mercedes</h5>
+            <h5 class="mx-1">new model</h5>
+          </div>
+          <!--End Single Item-->
+          <!--Single Item-->
+          <div class="featured-item my-3 d-flex p-2 text-capitalize
         align-items-baseline flex-wrap">
-          <span class="featured-icon mr-2">
-            <i class="fas fa-car"></i>
-          </span>
-          <h5 class="font-weight-bold mx-1">mercedes</h5>
-          <h5 class="mx-1">new model</h5>
+            <span class="featured-icon mr-2">
+              <i class="fas fa-car"></i>
+            </span>
+            <h5 class="font-weight-bold mx-1">mercedes</h5>
+            <h5 class="mx-1">new model</h5>
+          </div>
+          <!--End Single Item-->
         </div>
-        <!--End Single Item-->
+        <!--featured img-->
+        <div class="col-10 mx-auto col-md-6 featured-img my-3 align-self-center">
+          <div class="img-container">
+            <img src="img/featured.jpeg" alt="" class="img-fluid featured-photo">
+            <a href="#" class="featured-link">
+              <i class="fas fa-search"></i>
+            </a>
+          </div>
+        </div>
       </div>
-      <!--featured img-->
-      <div class="col-10 mx-auto col-md-6 featured-img my-3 align-self-center">
-        <div class="img-container">
-          <img src="img/featured.jpeg" alt="" class="img-fluid featured-photo">
-          <a href="#" class="featured-link">
-            <i class="fas fa-search"></i>
-          </a>
-        </div>
-      </div>
-     </div>
 
     </div>
   </section>
@@ -455,9 +455,9 @@
             <img src="img/car-american-1.jpeg" alt="car" class="img-fluid gallery-img">
           </div>
         </div>
-          <div class="col-sm-6 d-flex flex-column justify-content-between">
-            <div class="row">
-              <div class="col-sm-6">
+        <div class="col-sm-6 d-flex flex-column justify-content-between">
+          <div class="row">
+            <div class="col-sm-6">
               <div class="gallery-item">
                 <img src="img/car-american-2.jpeg" alt="car" class="img-fluid gallery-img">
               </div>
@@ -467,20 +467,20 @@
                 <img src="img/car-american-3.jpeg" alt="car" class="img-fluid gallery-img">
               </div>
             </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="gallery-item">
-                  <img src="img/car-american-4.jpeg" alt="car" class="img-fluid gallery-img">
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="gallery-item">
-                  <img src="img/car-american-5.jpeg" alt="car" class="img-fluid gallery-img">
-                </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-4.jpeg" alt="car" class="img-fluid gallery-img">
               </div>
             </div>
-          </div>        
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-5.jpeg" alt="car" class="img-fluid gallery-img">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -501,6 +501,174 @@
     </div>
   </section>
   <!--end Contact section-->
+  <!--Services Section-->
+  <div class="container">
+    <!--Section Title-->
+    <div class="row my-5">
+      <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+        <h1 class="font-weight-bold align-self-center mx-1">our</h1>
+        <h1 class="section-title-special mx-1">Services</h1>
+      </div>
+    </div>
+    <!-- End Section Title-->
+  </div>
+  <section class="services py-5 d-flex align-items-center">
+    <!--Video Container-->
+    <div class="video-container">
+      <video class="video-item" autoplay loop muted>
+        <source src="video/videoBcg.mp4" type="video/mp4">
+        Your Browser does not support video tag
+      </video>
+      </video>
+    </div>
+    <!--End Video Container-->
+    <!--Video overlay-->
+    <div class="video-overlay"></div>
+    <!--End Video overlay-->
+    <!--Service Content-->
+    <div class="container py-5">
+      <div class="row my-3">
+        <!--Col-->
+        <div class="col-8 mx-auto col-lg-6 col-md-4 my-3">
+          <div class="service py-5 pl-4">
+            <span class="service-icon">
+              <i class="fas fa-cogs"></i>
+            </span>
+            <h6 class="text-capitalize service-title">vehicle</h6>
+            <h5 class="text-uppercase font-weight-bold">vehicle</h5>
+          </div>
+        </div>
+        <!--End Col-->
+
+        <!--Col-->
+        <div class="col-8 mx-auto col-lg-6 col-md-4 my-3">
+          <div class="service py-5 pl-4">
+            <span class="service-icon">
+              <i class="fas fa-car-battery"></i>
+            </span>
+            <h6 class="text-capitalize service-title">battery</h6>
+            <h5 class="text-uppercase font-weight-bold">replacement</h5>
+          </div>
+        </div>
+        <!--End Col-->
+
+        <!--Col-->
+        <div class="col-8 mx-auto col-lg-6 col-md-4 my-3">
+          <div class="service py-5 pl-4">
+            <span class="service-icon">
+              <i class="fas fa-car-crash"></i>
+            </span>
+            <h6 class="text-capitalize service-title">roadside</h6>
+            <h5 class="text-uppercase font-weight-bold">assistance</h5>
+          </div>
+        </div>
+        <!--End Col-->
+      </div>
+
+    </div>
+  </section>
+  <!--End Services Section-->
+  <!--quotes section-->
+  <section class="quotes py-5 my-5">
+    <div class="container">
+      <!--Section Title-->
+      <div class="row my-5">
+        <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-self-center mx-1">what they</h1>
+          <h1 class="section-title-special mx-1">say</h1>
+        </div>
+      </div>
+      <!-- End Section Title-->
+      <div class="row">
+        <!--single card-->
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/car-american-1.jpeg" class="card-img-top">
+            <!--card body-->
+            <div class="card-body text-center customer-card-body">
+              <img src="img/customer-1.jpg" class="rounded-circle customer-img">
+              <div class="card-title">
+                <h5 class="customer-name text-capitalize">customer name</h5>
+              </div>
+              <h6 class="customer-job text-capitalize">customer job</h6>
+              <p class="customer-quote text-center">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, praesentium?
+              </p>
+              <span class="customer-icon">
+                <i class="fas fa-quote-left"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <!--end single card-->
+        <!--single card-->
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/car-american-2.jpeg" class="card-img-top">
+            <!--card body-->
+            <div class="card-body text-center customer-card-body">
+              <img src="img/customer-2.jpg" class="rounded-circle customer-img">
+              <div class="card-title">
+                <h5 class="customer-name text-capitalize">customer name</h5>
+              </div>
+              <h6 class="customer-job text-capitalize">customer job</h6>
+              <p class="customer-quote text-center">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, praesentium?
+              </p>
+              <span class="customer-icon">
+                <i class="fas fa-quote-left"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <!--end single card-->
+        <!--single card-->
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/car-american-3.jpeg" class="card-img-top">
+            <!--card body-->
+            <div class="card-body text-center customer-card-body">
+              <img src="img/customer-3.jpg" class="rounded-circle customer-img">
+              <div class="card-title">
+                <h5 class="customer-name text-capitalize">customer name</h5>
+              </div>
+              <h6 class="customer-job text-capitalize">customer job</h6>
+              <p class="customer-quote text-center">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, praesentium?
+              </p>
+              <span class="customer-icon">
+                <i class="fas fa-quote-left"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <!--end single card-->
+      </div>
+    </div>
+  </section>
+  <!--end quotes section-->
+
+  <!--Footer-->
+  <footer class="footer py-5">
+    <div class="footer-icons d-flex justify-content-around">
+      <a href="#" class="footer-icon">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="#" class="footer-icon">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="#" class="footer-icon">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="#" class="footer-icon">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="#" class="footer-icon">
+        <i class="fab fa-google-plus"></i>
+      </a>
+    </div>
+  </footer>
+  <!-- End Footer-->
 
 
 
